# warp

./: .gitignore  CLAUDE.md  Cargo.toml  MINIMAX.md
.claude/workflows/: adversarial-review.js  review-and-fix.js
app/: Cargo.toml
app/src/: app_menus.rs  root_view.rs
app/src/ai/: llms.rs  llms_tests.rs  request_usage_model.rs
app/src/auth/: auth_manager.rs
app/src/billing/: shared_objects_creation_denied_body.rs
app/src/drive/: index.rs  settings.rs
app/src/persistence/: agent.rs  sqlite.rs
app/src/resource_center/: main_page.rs
app/src/server/: iap.rs  server_api.rs
app/src/settings/: ai.rs
app/src/settings_view/: ai_page.rs  billing_and_usage_page.rs  billing_and_usage_page_v2.rs  main_page.rs  mod.rs  (+5 more)
app/tests/: README.md
crates/ai/: Cargo.toml
crates/anthropic_bridge/: Cargo.toml
crates/anthropic_bridge/src/: main.rs  translate.rs  translate_tests.rs
crates/command-signatures-v2/: build.rs
crates/mcp/: Cargo.toml
crates/warp_local_server/: Cargo.toml
crates/warp_local_server/src/: history.rs  history_tests.rs  lib.rs  main.rs  mcp.rs  mcp_tests.rs  provider.rs  sse.rs  sse_tests.rs  tools.rs  tools_tests.rs  trace.rs
crates/warp_local_server/src/history/: mod.rs  tests.rs
crates/warp_local_server/src/mcp/: mod.rs
crates/warp_local_server/src/provider/: mod.rs  tests.rs
crates/warp_local_server/src/tools/: builtins.rs  mod.rs  tests.rs
crates/warp_local_server/src/wire/: mod.rs  tests.rs
crates/warp_local_server/tests/: end_to_end.rs
crates/warpui/: build.rs
crates/warpui_core/: Cargo.toml
docs/agents/: domain.md
(+71 files in other folders)
