[package]
name = "anthropic_bridge"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[[bin]]
name = "anthropic-bridge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
url.workspace = true
