[package]
name = "warp_local_server"
version = "0.1.0"
edition = "2021"
publish.workspace = true
license.workspace = true

[lib]
name = "warp_local_server"
path = "src/lib.rs"

[[bin]]
name = "warp-max-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
futures.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
uuid.workspace = true
warp_multi_agent_api.workspace = true
